# mosquitto

./: .gitignore  CMakeLists.txt  ChangeLog.txt  Makefile  README.md  buildtest.py  config.h  config.mk  mosquitto.conf  vcpkg.json
apps/db_dump/: CMakeLists.txt  Makefile  db_dump.c  json.c  print.c  stubs.c
apps/mosquitto_ctrl/: CMakeLists.txt  Makefile  broker.c  client.c  dynsec.c  dynsec_client.c  dynsec_group.c  dynsec_role.c  example.c  mosquitto_ctrl.c  mosquitto_ctrl.h  options.c
apps/mosquitto_passwd/: CMakeLists.txt  Makefile  get_password.c  mosquitto_passwd.c
libcommon/: CMakeLists.txt  Makefile  base64_common.c  cjson_common.c  file_common.c  memory_common.c  memory_common.h  mqtt_common.c  password_common.c  property_common.c  random_common.c  strings_common.c  time_common.c  topic_common.c
plugins/: CMakeLists.txt  Makefile  plugin.mk
plugins/auth-by-env/: CMakeLists.txt  mosquitto_auth_by_env.c
plugins/common/: plugin_common.c  plugin_common.h
plugins/deny-protocol-version/: CMakeLists.txt
plugins/dynamic-security/: CMakeLists.txt  Makefile  acl.c  auth.c  clientlist.c  clients.c  config.c  config_init.c  control.c  default_acl.c  dynamic_security.h  grouplist.c  groups.c  kicklist.c  plugin.c  rolelist.c  roles.c  tick.c
plugins/examples/: CMakeLists.txt  Makefile
plugins/examples/add-properties/: CMakeLists.txt  Makefile  mosquitto_add_properties.c
plugins/examples/auth-by-env/: CMakeLists.txt  Makefile  mosquitto_auth_by_env.c
plugins/examples/auth-by-ip/: CMakeLists.txt  Makefile  mosquitto_auth_by_ip.c
plugins/examples/client-lifetime-stats/: CMakeLists.txt  Makefile  mosquitto_client_lifetime_stats.c
plugins/examples/client-properties/: CMakeLists.txt  Makefile  mosquitto_client_properties.c
plugins/examples/connection-state/: CMakeLists.txt  Makefile  mosquitto_connection_state.c
plugins/examples/delayed-auth/: CMakeLists.txt  Makefile  mosquitto_delayed_auth.c
plugins/examples/deny-protocol-version/: CMakeLists.txt  Makefile  mosquitto_deny_protocol_version.c
plugins/examples/force-retain/: CMakeLists.txt  Makefile  mosquitto_force_retain.c
plugins/examples/limit-subscription-qos/: CMakeLists.txt  Makefile  mosquitto_limit_subscription_qos.c
plugins/examples/message-timestamp/: CMakeLists.txt  Makefile  mosquitto_message_timestamp.c
plugins/examples/payload-ban/: CMakeLists.txt  Makefile  mosquitto_payload_ban.c
plugins/examples/payload-modification/: CMakeLists.txt  Makefile  mosquitto_payload_modification.c
plugins/examples/payload-size-stats/: CMakeLists.txt  Makefile  mosquitto_payload_size_stats.c
plugins/examples/plugin-event-stats/: CMakeLists.txt  Makefile  mosquitto_plugin_event_stats.c
plugins/examples/print-ip-on-publish/: CMakeLists.txt  Makefile  mosquitto_print_ip_on_publish.c
plugins/examples/topic-jail/: CMakeLists.txt  Makefile  mosquitto_topic_jail.c
plugins/examples/topic-modification/: CMakeLists.txt  Makefile  mosquitto_topic_modification.c
plugins/examples/wildcard-temp/: CMakeLists.txt  Makefile  (+1 more)
plugins/persist-sqlite/: CMakeLists.txt  Makefile  base_msgs.c  client_msgs.c  clients.c  common.c  init.c  persist_sqlite.h  plugin.c  restore.c  retain_msgs.c  subscriptions.c  tick.c
plugins/sparkplug-aware/: CMakeLists.txt  Makefile  on_message.c  plugin.c
test/broker/: 01-bad-initial-packets.py  01-connect-575314.py  01-connect-accept-protocol.py  01-connect-allow-anonymous.py  01-connect-auto-id.py  01-connect-disconnect-v5.py  01-connect-global-max-clients.py  01-connect-global-max-connections.py  01-connect-listener-allow-anonymous.py  01-connect-max-connections.py  01-connect-take-over.py  01-connect-uname-no-password-denied.py  01-connect-uname-or-anon.py  01-connect-uname-password-denied-no-will.py  01-connect-uname-password-denied.py  01-connect-uname-password-success-no-tls.py  01-connect-unix-socket.py  01-connect-zero-length-id.py  02-shared-nolocal.py  02-subpub-b2c-topic-alias.py  02-subpub-qos0-long-topic.py  02-subpub-qos0-subscription-id.py  02-subpub-qos0-topic-alias-unknown.py  02-subpub-qos0-topic-alias.py  02-subpub-qos1-message-expiry-retain.py  02-subpub-qos1-message-expiry-will.py  02-subpub-qos1-message-expiry.py  02-subpub-qos1-oversize-payload.py  02-subpub-qos2-max-inflight-bytes.py  02-subpub-qos2-pubrec-error.py  02-subpub-qos2-receive-maximum-1.py  02-subpub-qos2-receive-maximum-2.py  02-subpub-recover-subscriptions.py  02-subscribe-invalid-utf8.py  02-subscribe-long-topic.py  03-publish-b2c-qos1-len.py  03-publish-b2c-qos2-len.py  03-publish-bad-flags.py  03-publish-c2b-qos2-len.py  03-publish-dollar-v5.py  (+166 more)
test/lib/: 01-con-discon-success-v5.py  01-con-discon-success.py  01-con-discon-will-clear.py  01-con-discon-will-v5.py  01-con-discon-will.py  01-extended-auth-continue.py  01-extended-auth-failure.py  01-keepalive-pingreq.py  01-no-clean-session.py  01-pre-connect-callback.py  01-server-keepalive-pingreq.py  01-unpwd-set.py  01-will-set.py  01-will-unpwd-set.py  02-subscribe-helper-qos2.py  02-subscribe-qos0.py  02-subscribe-qos1.py  02-subscribe-qos2.py  02-unsubscribe-multiple-v5.py  02-unsubscribe-v5.py  02-unsubscribe.py  02-unsubscribe2-v5.py  03-publish-b2c-qos1-unexpected-puback.py  03-publish-b2c-qos1.py  03-publish-b2c-qos2-len.py  03-publish-b2c-qos2-unexpected-pubcomp.py  03-publish-b2c-qos2-unexpected-pubrel.py  03-publish-b2c-qos2.py  03-publish-c2b-qos1-disconnect.py  03-publish-c2b-qos1-len.py  03-publish-c2b-qos1-receive-maximum.py  03-publish-c2b-qos1-timeout.py  03-publish-c2b-qos2-disconnect.py  03-publish-c2b-qos2-len.py  03-publish-c2b-qos2-maximum-qos-0.py  03-publish-c2b-qos2-maximum-qos-1.py  03-publish-c2b-qos2-pubrec-error.py  03-publish-c2b-qos2-receive-maximum-1.py  03-publish-c2b-qos2-receive-maximum-2.py  03-publish-c2b-qos2-timeout.py  (+23 more)
test/unit/: CMakeLists.txt  Makefile  datatype_read.c  keepalive_test.c  persist_read_stubs.c  persist_read_test.c  persist_write_stubs.c  persist_write_test.c  property_add.c  property_read.c  property_user_read.c  strings_test.c  stubs.c  subs_stubs.c  subs_test.c  test.c
(+606 files in other folders)
